# ifqoi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ifqoi.def
.claude/: settings.local.json
include/: qoi.h  susie.h
src/: ifqoi.cpp  qoi_decoder.cpp
